cmake_minimum_required(VERSION 2.8)
project(cpp-primer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

add_subdirectory(src/ch01)
add_subdirectory(src/ch02)
add_subdirectory(src/ch03)
add_subdirectory(src/ch04)
add_subdirectory(src/ch05)
add_subdirectory(src/ch06)
add_subdirectory(src/ch07)
add_subdirectory(src/ch08)
add_subdirectory(src/ch09)
add_subdirectory(src/ch10)
add_subdirectory(src/ch11)
add_subdirectory(src/ch12)
add_subdirectory(src/ch13)
add_subdirectory(src/ch14)
add_subdirectory(src/ch15)
add_subdirectory(src/ch16)
add_subdirectory(src/ch17)
add_subdirectory(src/ch18)
add_subdirectory(src/ch19)

add_subdirectory(excersize/ch01)
add_subdirectory(excersize/ch02)
add_subdirectory(excersize/ch03)
add_subdirectory(excersize/ch04)
add_subdirectory(excersize/ch05)
add_subdirectory(excersize/ch06)
add_subdirectory(excersize/ch07)
add_subdirectory(excersize/ch08)
add_subdirectory(excersize/ch09)
add_subdirectory(excersize/ch10)
add_subdirectory(excersize/ch11)
add_subdirectory(excersize/ch12)
add_subdirectory(excersize/ch13)
add_subdirectory(excersize/ch14)
add_subdirectory(excersize/ch15)
add_subdirectory(excersize/ch16)
add_subdirectory(excersize/ch17)
add_subdirectory(excersize/ch18)
add_subdirectory(excersize/ch19)



add_executable(add src/ch01/add.cpp src/ch01/move.cpp src/ch01/move.h)
add_executable(while src/ch01/while.cpp)
add_executable(for src/ch01/for.cpp)
add_executable(end_of_file src/ch01/end_of_file.cpp)
add_executable(if src/ch01/if.cpp)
add_executable(Sales_item src/ch01/Sales_item.cpp)
add_executable(Sales_item_add src/ch01/Sales_item_add.cpp)
add_executable(Sales_item_add_2 src/ch01/Sales_item_add_2.cpp)
add_executable(book_sales src/ch01/book_sales.cpp)
add_executable(main_only src/ch01/main_only.cpp)

add_executable(exercise1_1 excersize/ch01/exercise1_1.cpp)
add_executable(exercise1_3 excersize/ch01/exercise1_3.cpp)
add_executable(exercise1_4 excersize/ch01/exercise1_4.cpp)
add_executable(exercise1_5 excersize/ch01/exercise1_5.cpp)
add_executable(exercise1_9 excersize/ch01/exercise1_9.cpp)
add_executable(exercise1_10 excersize/ch01/exercise1_10.cpp)
add_executable(exercise1_11 excersize/ch01/exercise1_11.cpp)
add_executable(exercise1_12 excersize/ch01/exercise1_12.cpp)
add_executable(exercise1_16 excersize/ch01/exercise1_16.cpp)
add_executable(exercise1_18 excersize/ch01/exercise1_18.cpp)
add_executable(exercise1_20 excersize/ch01/exercise1_20.cpp)
add_executable(exercise1_21 excersize/ch01/exercise1_21.cpp)
add_executable(exercise1_22 excersize/ch01/exercise1_22.cpp)
add_executable(exercise1_23 excersize/ch01/exercise1_23.cpp)


add_executable(unsigned src/ch02/unsigned.cpp)
add_executable(convs src/ch02/convs.cpp)
add_executable(scope_levels src/ch02/scope_levels.cpp)
add_executable(compounddecls src/ch02/compounddecls.cpp)
add_executable(dbl_ptr src/ch02/dbl_ptr.cpp)
add_executable(escape src/ch02/escape.cpp)
add_executable(inits src/ch02/inits.cpp)
add_executable(literals src/ch02/literals.cpp)
add_executable(ref-ex src/ch02/ref-ex.cpp)
add_executable(Sales_data src/ch02/Sales_data.cpp)




add_executable(avg_price src/ch07/ch711.cpp src/ch07/Sales_data.cpp src/ch07/Sales_data.h)
add_executable(Screen_main src/ch07/ch732.cpp)
add_executable(add_using src/ch03/add_using.cc)
add_executable(string_io src/ch03/string_io.cc)
add_executable(string_io2 src/ch03/string_io2.cc)
add_executable(getline src/ch03/getline.cc)
add_executable(vec_decls src/ch03/vec_decls.cc)
add_executable(vecScores src/ch03/vecScores.cc)
add_executable(arraysizeof src/ch04/arraysizeof.cc)
add_executable(cond src/ch04/cond.cc)
add_executable(factMain src/ch06/factMain.cpp)
add_executable(main src/ch15/text_query/main.cpp)
add_executable(move src/ch01/move.cpp)